🔧 chore: Comment out `customEndpoints` section in `librechat.yaml`
- Temporarily disabled the `customEndpoints` section for clarity and future updates.
- Ensured proper formatting with no newline at the end of the file.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -108,5 +108,5 @@ mcpServers:
     # timeout: 60000 # 60 seconds
 
 # Definition of custom endpoints
-customEndpoints:
-  - name: "openAI"
+# customEndpoints:
+#   - name: "openAI"
