🔧 chore: Simplify command execution in `librechat.yaml`
- Removed the echo statement and the `--key` argument from the `npx` command for a cleaner execution.
- Updated comments to clarify that the `SMITHERY_API_KEY` will be picked up from the environment directly.
- Maintained Linux compatibility with the existing command structure.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -97,8 +97,10 @@ mcpServers:
     command: sh                # Changed from cmd to sh for Linux/Alpine
     args:
       - -c
-      # Echo the command first, then execute it
-      - "echo \"Executing: npx -y \\\"@smithery/cli@latest\\\" run \\\"@smithery-ai/server-sequential-thinking\\\" --key \\\"${SMITHERY_API_KEY}\\\"\" && npx -y \"@smithery/cli@latest\" run \"@smithery-ai/server-sequential-thinking\" --key \"${SMITHERY_API_KEY}\""
+      # Simpler command: Run npx without the --key argument.
+      # We hope @smithery/cli or @smithery-ai/server-sequential-thinking
+      # will pick up SMITHERY_API_KEY from the environment directly.
+      - "npx -y \"@smithery/cli@latest\" run \"@smithery-ai/server-sequential-thinking\""
     # You can optionally add a timeout here if needed, e.g.:
     # timeout: 60000 # 60 seconds
 
