🔧 chore: Update command execution in `librechat.yaml` to pass API key as an argument
- Modified the `npx` command to explicitly include the `SMITHERY_API_KEY` as a distinct argument for better clarity and functionality.
- Updated comments to reflect the changes and ensure understanding of the command's purpose.
- Maintained compatibility with Linux/Alpine environments.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -97,10 +97,8 @@ mcpServers:
     command: sh                # Changed from cmd to sh for Linux/Alpine
     args:
       - -c
-      # Simpler command: Run npx without the --key argument.
-      # We hope @smithery/cli or @smithery-ai/server-sequential-thinking
-      # will pick up SMITHERY_API_KEY from the environment directly.
-      - "npx -y \"@smithery/cli@latest\" run \"@smithery-ai/server-sequential-thinking\""
+      # Attempt to ensure the API key from the environment variable is passed as a distinct argument
+      - "NPX_COMMAND=\"@smithery/cli@latest run @smithery-ai/server-sequential-thinking --key \\\"${SMITHERY_API_KEY}\\\""; npx -y $NPX_COMMAND"
     # You can optionally add a timeout here if needed, e.g.:
     # timeout: 60000 # 60 seconds
 
