--- a/librechat.yaml
+++ b/librechat.yaml
@@ -97,8 +97,8 @@ mcpServers:
     command: sh                # Changed from cmd to sh for Linux/Alpine
     args:
       - -c
-      # Attempt to ensure the API key from the environment variable is passed as a distinct argument
-      - "NPX_COMMAND=\"@smithery/cli@latest run @smithery-ai/server-sequential-thinking --key \\\"${SMITHERY_API_KEY}\\\""; npx -y $NPX_COMMAND"
+      - > # Use YAML folded style for the command string to improve readability and handling of quotes
+        npx -y "@smithery/cli@latest" run "@smithery-ai/server-sequential-thinking" --key "${SMITHERY_API_KEY}"
     # You can optionally add a timeout here if needed, e.g.:
     # timeout: 60000 # 60 seconds
 
