--- a/librechat.yaml
+++ b/librechat.yaml
@@ -92,13 +92,12 @@ actions:
 #       - /path/to/obsidian/vault
 
 mcpServers:
-  server-sequential-thinking: # This is your chosen name for this server instance
-    type: stdio                 # Specifies that it's launched via a command
-    command: sh                # Changed from cmd to sh for Linux/Alpine
+  sequential-thinking-mcp: # New name for this server entry
+    type: stdio
+    command: npx  # Direct command
     args:
-      - -c
-      - > # Use YAML folded style for the command string to improve readability and handling of quotes
-        npx -y "@smithery/cli@latest" run "@smithery-ai/server-sequential-thinking" --key "${SMITHERY_API_KEY}"
+      - -y
+      - "@modelcontextprotocol/server-sequential-thinking"
     # You can optionally add a timeout here if needed, e.g.:
     # timeout: 60000 # 60 seconds
 
