--- a/librechat.yaml
+++ b/librechat.yaml
@@ -66,7 +66,7 @@ actions:
 # MCP Servers
 mcpServers:
   smithery-sequential-thinking: # New name for this server entry
-    type: sse
+    # type: sse # Temporarily omitted to see if it resolves the 400 error
     url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c" # Temporarily hardcoded API key
     timeout: 90000
 
