🔧 chore: Update MCP server configuration in `librechat.yaml` to use new command structure
- Changed the server entry type to `stdio` for compatibility with Render's Alpine Linux.
- Updated the command to utilize `sh` and pass the API key via `--config` for improved security and flexibility.
- Maintained the existing timeout setting for the MCP server.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -66,9 +66,14 @@ actions:
 # MCP Servers
 mcpServers:
   smithery-sequential-thinking: # New name for this server entry
-    # type: sse # Temporarily omitted to see if it resolves the 400 error
-    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c" # Temporarily hardcoded API key
-    timeout: 90000
+    type: stdio
+    command: sh # For Render's Alpine Linux
+    args:
+      - -c
+      # Use smithery/cli to run the server, passing API key via --config
+      - > # YAML folded style for readability
+        npx -y "@smithery/cli@latest" run "@smithery-ai/server-sequential-thinking" --config "{\"key\":\"${SMITHERY_API_KEY}\"}"
+    timeout: 90000 # 90 seconds timeout
 
 # Definition of custom endpoints
 # customEndpoints:
