🔧 chore: Update MCP server configuration in `librechat.yaml` to use URL format
- Reintroduced the `type` field as a comment for clarity on server entry configuration.
- Updated the server entry to use a URL format for the `smithery-sequential-thinking` server, passing the API key via the URL.
- Maintained the existing timeout setting for the MCP server.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -66,14 +66,10 @@ actions:
 # MCP Servers
 mcpServers:
   smithery-sequential-thinking: # New name for this server entry
-    type: stdio
-    command: sh # For Render's Alpine Linux
-    args:
-      - -c
-      # Use smithery/cli to run the server, passing API key via --config
-      - > # YAML folded style for readability
-        npx -y "@smithery/cli@latest" run "@smithery-ai/server-sequential-thinking" --config "{\"key\":\"${SMITHERY_API_KEY}\"}"
-    timeout: 90000 # 90 seconds timeout
+    # type: sse # Temporarily omitted in last attempt, let's put it back or leave it omitted based on what LibreChat prefers for URL based MCP
+    # For now, let's assume omitting type is fine if url is provided, as per earlier logs
+    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?api_key=${SMITHERY_API_KEY}" # Using env var again, assuming it's set
+    timeout: 90000
 
 # Definition of custom endpoints
 # customEndpoints:
