--- a/librechat.yaml
+++ b/librechat.yaml
@@ -68,7 +68,7 @@ mcpServers:
   smithery-sequential-thinking: # New name for this server entry
     # type: sse # Temporarily omitted in last attempt, let's put it back or leave it omitted based on what LibreChat prefers for URL based MCP
     # For now, let's assume omitting type is fine if url is provided, as per earlier logs
-    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?api_key=${SMITHERY_API_KEY}" # Using env var again, assuming it's set
+    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c" # Hardcoding API key since environment variable substitution isn't working
     timeout: 90000
 
 # Definition of custom endpoints
