🔧 chore: Revert MCP server configuration in `librechat.yaml` to use streamable-http
- Changed the server entry type back to `streamable-http` from `websocket` to align with previous configurations.
- Updated the server URL to use `https://` while retaining the profile and hardcoded API key parameters.
- Maintained the existing timeout setting for the MCP server.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -66,8 +66,8 @@ actions:
 # MCP Servers
 mcpServers:
   smithery-sequential-thinking: # New name for this server entry
-    type: websocket # Changed to websocket as per Smithery hosting docs
-    url: "wss://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?profile=delightful-hyena-GSmzOH&api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c" # Changed to wss://, kept profile & api_key params
+    type: streamable-http # Reverting to streamable-http
+    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?profile=delightful-hyena-GSmzOH&api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c" # URL with profile and hardcoded API key
     timeout: 90000
 
 # Definition of custom endpoints
