--- a/rag.yml
+++ b/rag.yml
@@ -20,6 +20,8 @@ services:
       - POSTGRES_DB=mydatabase
       - POSTGRES_USER=myuser
       - POSTGRES_PASSWORD=mypassword
+      - CHUNK_SIZE=1000
+      - CHUNK_OVERLAP=100 # Default, can be adjusted if needed
     ports:
       - "${RAG_PORT}:${RAG_PORT}"
     depends_on:
